fix scrollbar style

--- a/components/more_channels/more_channels.scss
+++ b/components/more_channels/more_channels.scss
@@ -97,6 +97,14 @@
           }
         }
     }
+
+    ::-webkit-scrollbar {
+      width: 4px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: none;
+    }
   }
 
   #searchChannelsTextbox {
